feat: Update user management with improved data initialization and UUID handling